Fix horizontal scroll in header

--- a/src/style/scss/cmps/HeadFilter.scss
+++ b/src/style/scss/cmps/HeadFilter.scss
@@ -6,7 +6,6 @@
     box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
     border: 1px solid #dddddd;
     margin-bottom: 0.5em;
-    margin-inline: 2.5rem;
     position: relative;
     column-gap: 0.4em;
     font-family: circular-bold;
